--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ plugins:
 author:
 #  name   : "Jan Hązła"
   avatar : "images/as_group-24.jpg"
-  bio    : "Postdoctoral researcher, EPFL, Lausanne, Switzerland"
+  bio    : "Research chair, AIMS Rwanda, Kigali"
 #  links:
 #    - label: "Website"
 #      icon: "fas fa-fw fa-link"
