--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,5 @@ main:
     url: /research/
   - title: "Publications"
     url: /publications/
-  - title: "Contact"
-    url: /contact/
+  - title: "Announcements"
+    url: /announcements/
